2011-07-05  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (cubic-bezier-curve): Renamed BEZIER-CURVE to
	CUBIC-BEZIER-CURVE.
	(bezier-curve): Created a new BEZIER-CURVE class which uses
	bernstein polynomials directly to calculate the curve. It is also
	much faster than the matrix form, CUBIC-BEZIER-CURVE.

	* utility.lisp (evaluate-bernstein-polygnomial): A way to evaluate
	the bernstein polynomials.
	(create-bernstein-polynomial): A function for creating an instance
	of a bernstein polynomial.

	* generics.lisp (zerop): Added an instance for numbers.

2011-07-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* utility.lisp (#:l-math): Added a file for utility functions.
	(factorial): Added a factorial function.
	(binomial-coefficient): Calculates binomial-coefficients using
	the slower factorial definition.

2011-06-20  Rudy Neeser  <rudy.neeser@gmail.com>
	* spline.lisp (evaluate): Some better error reporting.

2011-06-11  Rudy Neeser  <rudy.neeser@gmail.com>
	* interpolate.lisp (linear-interpolation): Modified this to use a
	more standard linear interpolation form between points.

2011-06-09  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (coefficient-matrix): Made an easy way to find the
	polynomial coefficients that control the shape of the splines /
	curves.

2011-06-08  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (evaluate): Performs some error checking to ensure
	that evaluate is not called on a spline with no geometry.

2011-06-07  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (matrix-spline): Added a class for splines
	represented using a basis matrix.
	(evaluate): Added a generic method for evaluating splines.
	(spline-geometry): Added a generic method for accessing the
	geometry making up a spline.
	(set-spline-geometry): Sets the geometry making up a spline
	(last-shared-spline): A class that represents splines for which
	each segment shares the last geometry of the previous segment.