@@ -124,26 +124,55 @@ create it using CREATE-BERNSTEIN-POLYNOMIAL."
 		 :initarg :multiplicity
 		 :type (or null (simple-array fixnum))
 		 :accessor multiplicity
-		 :documentation "The multiplicity of the above knots."))
+		 :documentation "The multiplicity of the above knots.")
+   (uniform :initform nil
+	    :reader uniform-p
+	    :documentation "A boolean indicating whether this is a
+	    uniform sequence of knots or not."))
   (:documentation "Some docs. You will likely find it more convenient
-  to construct instance of this class using MAKE-KNOTS."))
+  to construct instance of this class using MAKE-KNOTS. Notice that
+  B-SPLINE-BASIS requires a phantom knot on either end of the knot
+  sequence. MAKE-KNOTS will automatically add those knots for you."))
 
-(defmethod initialize-instance :after ((knots b-spline-knots) &key)
-  (unless (= (length (knots knots))
-	     (length (multiplicity knots)))
-    (error 'l-math-error :format-control "There are a different number of knots to specified multiplicity.")))
+(defmethod initialize-instance :after ((knot-data b-spline-knots) &key)
+  (with-accessors ((knots knots)
+		   (multiplicity multiplicity)) knot-data
+    (unless (= (length knots)
+	       (length multiplicity))
+      (error 'l-math-error :format-control "There are a different number of knots to specified multiplicity."))
+    (when (and (every #'(lambda (item)
+			  (= item 1))
+		      multiplicity)
+	       (let ((distance (- (aref knots 1) (aref knots 0))))
+		 (loop
+		    for i from 0 below (length knots)
+		    for j from 1 below (length knots)
+		    always (equivalent distance (- (aref knots j)
+						   (aref knots i))))))
+      (setf (slot-value knot-data 'uniform) t))))
 
-(defun make-knots (knots multiplicity)
+
+(defun make-knots (knots multiplicity &key (add-phantoms t))
+  "Creates a knot sequence. Notice that this will add some phantom
+knots to the beginning and end of the sequence, unless ADD-PHANTOMS is
+false."
   (declare (type list knots multiplicity))
-  (make-instance 'b-spline-knots
-		 :knots  (make-array (length knots) :element-type 'double-float
-				     :initial-contents (mapcar #'(lambda (knot)
-								   (coerce knot 'double-float))
-							       knots))
-		 :multiplicity (make-array (length multiplicity) :element-type 'fixnum
-					   :initial-contents (mapcar #'(lambda (multi)
-									 (coerce multi 'fixnum))
-								     multiplicity))))
+  (let ((knots (if add-phantoms
+		   (append (cons (1- (first knots)) knots)
+			   (list (1+ (first (last knots)))))
+		   knots))
+	(multiplicity (if add-phantoms
+			  (append (cons 1 multiplicity)
+				  (list 1)))))
+    (make-instance 'b-spline-knots
+		   :knots  (make-array (length knots) :element-type 'double-float
+				       :initial-contents (mapcar #'(lambda (knot)
+								     (coerce knot 'double-float))
+								 knots))
+		   :multiplicity (make-array (length multiplicity) :element-type 'fixnum
+					     :initial-contents (mapcar #'(lambda (multi)
+									   (coerce multi 'fixnum))
+								       multiplicity)))))
 
 (defgeneric all-knots (knots)
   (:documentation "Given a knots data structure, this will list all
@@ -235,10 +264,18 @@ create it using CREATE-BERNSTEIN-POLYNOMIAL."
       (values (- index degree)
 	      index))))
 
-(defun b-spline-basis (knot-data degree family parameter &optional (offset degree))
+(defun b-spline-basis (knot-data degree family parameter &key (offset degree) fast-spline-index)
+  "Ask for the value of a given basis function. This is based on
+Farin's 'Curves and Surfaces for Computer Aided Geometric Design. DEGREE is the degree of the curve.
+
+This has some pre-calculated basis functions for uniform knot
+secquences. You can access these by specifying an index using
+FAST-SPLINE-INDEX. This is an integer between 0 and DEGREE, and
+specifies which of the basis functions should be called."
   (declare (type b-spline-knots knot-data)
 	   (type fixnum degree)
-	   (type number parameter))
+	   (type number parameter)
+	   (type (or null fixnum) fast-spline-index))
   (when (minusp degree)
     (error 'l-math-error :format-control "The degree of a b-spline may not be negative."))
   (let ((current (get-ith-knot knot-data family offset))
@@ -251,34 +288,39 @@ create it using CREATE-BERNSTEIN-POLYNOMIAL."
 		(< parameter current))
 	   1
 	   0))
-      ;; ((= degree 2)
-      ;;  ;; Some code to speed up the quadratic case. First, we need
-      ;;  ;; to shift the parameter to begin at 0.
-      ;;  (let ((u (abs (second (multiple-value-list (truncate parameter))))))
-      ;; 	 (ecase (mod (+ family 1) 3)
-      ;; 	   (2 (* 1/2 (expt u 2)))
-      ;; 	   (1 (+ 1/2 u (- (expt u 2))))
-      ;; 	   (0 (+ 1/2 (- u) (* 1/2 (expt u 2)))))))
-      ;; ((= degree 3)
-      ;;  ;; Some code to speed up the quadratic case. First, we need
-      ;;  ;; to shift the parameter to begin at 0.
-      ;;  (let ((u (abs (second (multiple-value-list (truncate parameter))))))
-      ;; 	 (ecase (mod (+ family 2) 4)
-      ;; 	   (3 (* 1/6 (expt u 3)))
-      ;; 	   (2 (+ 1/6 (* 1/2 u) (* -1/2 (expt u 2)) (* -1/2 (expt u 3))))
-      ;; 	   (1 (+ 4/6 (- (expt u 2)) (* 1/2 (expt u 3))))
-      ;; 	   (0 (+ 1/6 (* -1/2 u) (* 1/2 (expt u 2)) (* -1/6 (expt u 3)))))))
+      ((and fast-spline-index
+	    (uniform-p knot-data)
+	    (= degree 2))
+       ;; Some code to speed up the quadratic case. First, we need
+       ;; to shift the parameter to begin at 0.
+       (let ((u (abs (second (multiple-value-list (truncate parameter))))))
+      	 (ecase fast-spline-index
+      	   (2 (* 1/2 (expt u 2)))
+      	   (1 (+ 1/2 u (- (expt u 2))))
+      	   (0 (+ 1/2 (- u) (* 1/2 (expt u 2)))))))
+      ((and fast-spline-index
+	    (uniform-p knot-data)
+      	    (= degree 3))
+       ;; Some code to speed up the quadratic case. First, we need
+       ;; to shift the parameter to begin at 0.
+       (let ((u (abs (second (multiple-value-list (truncate parameter))))))
+      	 (ecase fast-spline-index
+      	   (3 (* 1/6 (expt u 3)))
+      	   (2 (+ 1/6 (* 1/2 u) (* 1/2 (expt u 2)) (* -1/2 (expt u 3))))
+      	   (1 (+ 4/6 (- (expt u 2)) (* 1/2 (expt u 3))))
+      	   (0 (+ 1/6 (* -1/2 u) (* 1/2 (expt u 2)) (* -1/6 (expt u 3)))))))
       (t
        (+ (if (equivalent (- nth-after-1 before) 0)
 	      0
 	      (* (/ (- parameter before)
 		    (- nth-after-1 before))
-		 (b-spline-basis knot-data (1- degree) family parameter offset)))
+		 (b-spline-basis knot-data (1- degree) family parameter :offset offset)))
 	  (if (equivalent (- nth-after current) 0)
 	      0
 	      (* (/ (- nth-after parameter)
 		    (- nth-after current))
-		 (b-spline-basis knot-data (1- degree) (1+ family) parameter offset))))))))
+		 (b-spline-basis knot-data (1- degree) (1+ family) parameter :offset offset))))))))
+
 
 
 (defun test-3-3 (u)
